[package]
name = "ios"
version = "0.0.1"
description = "Light-weight CLI tool to extract iOS backup"
edition = "2021"
authors = ["Vignesh Rao"]
license = "MIT"
rust-version = "1.80.0"
documentation = "https://docs.rs/ios/latest/ios"
homepage = "https://github.com/thevickypedia/iOS-backup"
repository = "https://github.com/thevickypedia/iOS-backup"
keywords = ["iOS-backup", "sqlite"]
categories = ["no-std", "command-line-utilities", "development-tools"]
include = ["/src", "LICENSE"]
exclude = [".github", ".gitignore", "README.md"]

[[bin]]
name = "ios"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
dirs = "6.0.0"
plist = "1.7.0"
